--- a/Cohortem.csproj
+++ b/Cohortem.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net9</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NAudio" Version="1.8.5" />
+    <PackageReference Include="managed-midi" Version="1.10.1" />
     <PackageReference Include="ReadLine" Version="2.0.1" />
   </ItemGroup>
 
